; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_xhci-mem.c_xhci_init_endpoint_timer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_xhci-mem.c_xhci_init_endpoint_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xhci_hcd = type { i32 }
%struct.xhci_virt_ep = type { %struct.xhci_hcd*, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i32 }

@xhci_stop_endpoint_command_watchdog = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xhci_hcd*, %struct.xhci_virt_ep*)* @xhci_init_endpoint_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xhci_init_endpoint_timer(%struct.xhci_hcd* %0, %struct.xhci_virt_ep* %1) #0 {
  %3 = alloca %struct.xhci_hcd*, align 8
  %4 = alloca %struct.xhci_virt_ep*, align 8
  store %struct.xhci_hcd* %0, %struct.xhci_hcd** %3, align 8
  store %struct.xhci_virt_ep* %1, %struct.xhci_virt_ep** %4, align 8
  %5 = load %struct.xhci_virt_ep*, %struct.xhci_virt_ep** %4, align 8
  %6 = getelementptr inbounds %struct.xhci_virt_ep, %struct.xhci_virt_ep* %5, i32 0, i32 1
  %7 = call i32 @init_timer(%struct.TYPE_2__* %6)
  %8 = load %struct.xhci_virt_ep*, %struct.xhci_virt_ep** %4, align 8
  %9 = ptrtoint %struct.xhci_virt_ep* %8 to i64
  %10 = load %struct.xhci_virt_ep*, %struct.xhci_virt_ep** %4, align 8
  %11 = getelementptr inbounds %struct.xhci_virt_ep, %struct.xhci_virt_ep* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store i64 %9, i64* %12, align 8
  %13 = load i32, i32* @xhci_stop_endpoint_command_watchdog, align 4
  %14 = load %struct.xhci_virt_ep*, %struct.xhci_virt_ep** %4, align 8
  %15 = getelementptr inbounds %struct.xhci_virt_ep, %struct.xhci_virt_ep* %14, i32 0, i32 1
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  store i32 %13, i32* %16, align 8
  %17 = load %struct.xhci_hcd*, %struct.xhci_hcd** %3, align 8
  %18 = load %struct.xhci_virt_ep*, %struct.xhci_virt_ep** %4, align 8
  %19 = getelementptr inbounds %struct.xhci_virt_ep, %struct.xhci_virt_ep* %18, i32 0, i32 0
  store %struct.xhci_hcd* %17, %struct.xhci_hcd** %19, align 8
  ret void
}

declare dso_local i32 @init_timer(%struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
